# fxhash-webpack-rust-wasm-boilerplate

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.cargo/: config
config/: webpack.config.js
lib/config/: webpack.config.js
project/public/: index.html
project/src/: index.js  lib.rs
public/: index.html  style.css
src/: index.js  lib.rs
